# QuanLyKhachSan

./: README.md  pyproject.toml
QuanLyKhachSan/: settings.py  urls.py
app/: custum_user_manager.py  enum_type.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/templates/: home.html
app/templates/app/: Pets.HTML  base.html  contact.html  index.html  mainview.html  navbar.html
app/templates/registration/: login.html  register.html
app/utils/: send_email.py  template_mail.py
