[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["ThanhVy <thanhvy24042002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.5"
psycopg2-binary = "2.9.1"
djangorestframework = "3.12.4"
djangorestframework-simplejwt = "5.3.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
